# AndroidOpencvDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mark/androidopencvdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DetectionBasedTracker_jni.cpp  native-lib.cpp
app/src/main/java/com/mark/androidopencvdemo/: MainActivity.kt
app/src/main/java/com/mark/androidopencvdemo/app/: MainApplication.java
app/src/main/java/com/mark/androidopencvdemo/ui/: ImageCaughtFaceActivity.java
app/src/main/java/com/mark/androidopencvdemo/ui/camera/: CameraCaughtActivity.java  CameraRecognitionActivity.java
app/src/main/java/com/mark/androidopencvdemo/ui/image/: ImageCaughtFaceActivity.java  ImageRecognitionActivity.java
app/src/main/java/com/mark/androidopencvdemo/util/: AssetsHelper.java
app/src/main/res/layout/: activity_image_caught_face.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mark/androidopencvdemo/: ExampleUnitTest.kt
basemodule/src/androidTest/java/com/mark/basemoudle/: ExampleInstrumentedTest.kt
basemodule/src/main/: AndroidManifest.xml
basemodule/src/main/java/com/mark/basemoudle/base/: BaseActivity.java
basemodule/src/test/java/com/mark/basemoudle/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/java/src/org/opencv/samples/facedetect/: FdActivity.java
